@@ -1,3 +1,9 @@
+2012-01-12  Albert Chu <chu11@llnl.gov>
+
+	* libfreeipmi/sensor-read/ipmi-sensor-read.c
+	(_sensor_reading_corner_case_checks): Handle corner case in Sun
+	Blade 6000M2.
+	
 2012-01-11  Albert Chu <chu11@llnl.gov>
 
 	Merge sunbladex6250sensor branch
